added license details

--- a/nodes/91-flowhub-push.html
+++ b/nodes/91-flowhub-push.html
@@ -155,7 +155,13 @@
   </div>
 
   <div class="form-row">
-      Api Token can be obtained <a style="color: blue;" href="mailto:api.token@flowhub.org?subject=API%20Token%20Request">upon request &nbsp;<i class="fa fa-paper-plane-o"></i></a>.
+      Api Token can be obtained <a style="color: blue;" href="mailto:api.token@flowhub.org?subject=API%20Token%20Request">upon request <i class="fa fa-external-link"></i></a>.
+  </div>
+
+  <div class="form-row">
+      All flows submitted are licensed under a copyleft <a style="color: blue;" target="_blank" href="https://raw.githubusercontent.com/gorenje/flows.flowhub.org/main/LICENSE">license <i class="fa fa-external-link"></i></a>,<br>
+      that grants complete do-anything-but-not-evil permission to the user<br>
+      and provides no warranty in case of failure nor guarantee of success.
   </div>
 </script>
 
