--- a/nodes/90-flowhub-pull.html
+++ b/nodes/90-flowhub-pull.html
@@ -10,7 +10,7 @@
            icon:     "fa fa-eye",
            flowid:   key,
            sublabel: key,
-           selected: false,
+           selected: $('#node-input-flowid').val() == key,
            checkbox: false,
            children: undefined
          });
@@ -31,6 +31,8 @@
      icon: "icons/change.svg",
      category: 'flowhub',
      defaults: {
+       notab: { value: false },
+       flowid: { value: "" }
      },
      inputs: 0,
      outputs: 0,
@@ -57,9 +59,21 @@
        ).on('treelistselect', function(event, item) {
          if ( item.flowid ) {
            $('#node-input-flowid').val(item.flowid);
+           $('#flowhubpull-view-flow-link').attr(
+             'href', 'https://flowhub.org/f/'+item.flowid
+           ).show();
          }
        });
+
        var items = [];
+
+       if ( this._config.flowid ) {
+         setTimeout( () => {
+           $('#flowhubpull-view-flow-link').attr(
+             'href', 'https://flowhub.org/f/' + $('#node-input-flowid').val()
+           ).show();
+         }, 200);
+       }
 
        this._resize = function() {
          var rows = $("#dialog-form>div:not(.node-input-target-list-row)");
@@ -117,7 +131,7 @@
            }), "warning");
          }
 
-         $('#node-dialog-cancel').trigger('click')
+         $('#node-dialog-ok').trigger('click')
 
          $.get( "https://api.flowhub.org/v1/flows/" +
                 $('#node-input-flowid').val() +
@@ -155,8 +169,8 @@
 
 <script type="text/html" data-template-name="FlowHubPull">
     <div class="form-row">
-        <input type="text" id="node-input-flowid"
-               style="display:inline-block; width:70%px; vertical-align:baseline;"
+        <input type="text" id="node-input-flowid" disabled="disabled"
+               style="display:inline-block; width:40%; vertical-align:baseline;"
                placeholder="FlowId to Import">
         <button id="node-input-import-flow-but"
                 class="red-ui-button">Import Flow</button>
@@ -168,6 +182,7 @@
       </label>
       <input type="checkbox" id="node-input-notab"
              style="display:inline-block; width:15px; vertical-align:baseline;">
+      <a id="flowhubpull-view-flow-link" style="color: blue; display: none;" target="_blank" href="">view flow <i class="fa fa-external-link"></i></a>
     </div>
 
     <div class="form-row node-input-target-row">
@@ -182,6 +197,13 @@
         </div>
 
         <div id="node-input-flowhubpull-target-container-div"></div>
+    </div>
+
+    <div class="form-row">
+        All flows are licensed under a copyleft <a style="color: blue;" target="_blank" href="https://raw.githubusercontent.com/gorenje/flows.flowhub.org/main/LICENSE">license <i class="fa fa-external-link"></i></a>,<br>
+        hereby permission is given to use any flow for any purpose <br>
+        <b>other than</b> for evil. No guarantee of purpose fulfillment<br>
+        is made nor warrenty for failure - all risk is carried by the user.
     </div>
 </script>
 
