allow including flowhubpull nodes when pushing

--- a/nodes/91-flowhub-push.html
+++ b/nodes/91-flowhub-push.html
@@ -94,6 +94,7 @@
         fullname: { value: "" },
         email: { email: "" },
         name: { value: "" },
+        incflowhubpull: { value: false },
       },
 
       /*
@@ -196,6 +197,17 @@
       All flows submitted are licensed under a copyleft <a style="color: blue;" target="_blank" href="https://raw.githubusercontent.com/gorenje/flows.flowhub.org/main/LICENSE">license <i class="fa fa-external-link"></i></a>,<br>
       that grants complete do-anything-but-not-evil permission to the user<br>
       and provides no warranty in case of failure nor guarantee of success.
+  </div>
+
+  <div class="form-row">
+    <hr/>
+  </div>
+
+  <div class="form-row">
+    <label for="node-input-incflowhubpull" style="min-width: 200px;">
+              <span>Include FlowHubPull nodes?</span>
+    </label>
+    <input type="checkbox" id="node-input-incflowhubpull" style="display:inline-block; width:15px; vertical-align:baseline;">
   </div>
 
   <div class="form-row">
