--- a/nodes/91-flowhub-push.html
+++ b/nodes/91-flowhub-push.html
@@ -56,13 +56,9 @@
 
         error: function (jqXHR, textStatus, errorThrown) {
           if (jqXHR.status == 404) {
-            RED.notify(node._("common.notification.error", {
-              message: node._("common.notification.errors.not-deployed")
-            }), "error");
+            RED.notify("Node has not yet been deployed, please deploy.", "error");
           } else if (jqXHR.status == 405) {
-            RED.notify(node._("common.notification.not_allowed", {
-              message: node._("inject.errors.not_allowed")
-            }), "error");
+            RED.notify("Not Allowed.", "error");
           } else if (jqXHR.status == 500) {
             RED.notify(node._("common.notification.error", {
               message: node._("inject.errors.failed")
@@ -103,7 +99,7 @@
        * that should be triggered automagically? For now, no.
        */
       inputs: 0,
-      outputs: 1,
+      outputs: 0,
 
       label: function() {
         return (this.name || this._def.paletteLabel);
@@ -117,6 +113,12 @@
           types:["env", "msg", "flow","global", "cred"],
           typeField: "#node-input-apiTokenType"
         });
+
+        var that = this;
+        $('#node-input-push-flow-but').on('click', (e) => {
+          e.preventDefault();
+          doSubmission( that, getFlowDataFromCurrentWorkspace() )
+        })
       },
 
       oneditcancel: function() {
@@ -128,27 +130,20 @@
       labelStyle: function() {
         return this.name?"node_label_italic":"";
       },
-
-      button: {
-        enabled: function() {
-          return !this.changed
-        },
-
-        onclick: function () {
-          if (this.changed) {
-            return RED.notify(RED._("notification.warning", {
-              message: RED._("notification.warnings.undeployedChanges")
-            }), "warning");
-          }
-
-          doSubmission( this, getFlowDataFromCurrentWorkspace() )
-        }
-      },
     });
   })();
 </script>
 
 <script type="text/html" data-template-name="FlowHubPush">
+  <div class="form-row">
+    <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="common.label.name">Name</span></label>
+    <input type="text" id="node-input-name" placeholder="Name">
+  </div>
+
+  <div class="form-row">
+    <hr />
+  </div>
+
   <div class="form-row">
     <label for="node-input-apiToken">
       <i class="fa fa-tag"></i>
@@ -188,7 +183,7 @@
   </div>
 
   <div class="form-row">
-      All submissions must be verified by email: after submission you<br>
+      All submissions must be verified by email. After submission you<br>
       will recieve an email to <b>confirm your submission</b>.
   </div>
 
@@ -211,8 +206,8 @@
   </div>
 
   <div class="form-row">
-    <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="common.label.name">Name</span></label>
-    <input type="text" id="node-input-name" placeholder="Name">
+      <button id="node-input-push-flow-but"
+              class="red-ui-button">Push Flow-Tab to FlowHub</button>
   </div>
 </script>
 
