added view flow link to the push property panel

--- a/nodes/90-flowhub-pull.html
+++ b/nodes/90-flowhub-pull.html
@@ -209,7 +209,7 @@
       </label>
       <input type="checkbox" id="node-input-notab"
              style="display:inline-block; width:15px; vertical-align:baseline;">
-      <a id="flowhubpull-view-flow-link" style="color: blue; display: none;" target="_blank" href="">view flow <i class="fa fa-external-link"></i></a>
+      <a id="flowhubpull-view-flow-link" style="color: blue; display: none;" target="_blank" href="">View Flow <i class="fa fa-external-link"></i></a>
     </div>
 
     <div class="form-row node-input-target-row">
